# drf_HW

./: ENV_TEMPLATES  README.md  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0003_alter_course_author.py  0004_alter_lesson_author.py  0005_subscribe.py  0006_alter_subscribe_options_alter_subscribe_course.py
payment/: models.py  serializers.py  services.py  urls.py  views.py
payment/management/commands /: fill_payment_data.py
payment/migrations/: 0001_initial.py  0002_payment_session_id.py  0003_payment_payment_link.py
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
